apps/support/rustdesk-server/overlays/homelab/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustdesk
spec:
  externalTrafficPolicy: Local
