apps/support/rustdesk-server/overlays/homelab/ingress-rustdesk.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustdesk
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - rustdesk.support4u.se
    secretName: rustdesk-tls
  rules:
  - host: rustdesk.support4u.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rustdesk
            port:
              number: 21118
